mejoras en el codigo

--- a/index.html
+++ b/index.html
@@ -3,39 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Buen Uso de los Eventos click</title>
-
-
-	<link rel="stylesheet" href="style.css">
-
-
-	<script src="https://kit.fontawesome.com/ad8b63a33f.js" crossorigin="anonymous"></script>
+	<title>Mejor uso de los eventos del mouse</title>
+	<link rel="stylesheet" href="main.css">
+	<script src="https://kit.fontawesome.com/21cece7f89.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	
 
 
-	<div class="container">
-		<button class="btn">Agregar elemento</button>
-
-		<div class="lista"> 
-			<span class="item">
-				Elemento 1<i class="fas fa-check-square"></i>
-			</span>
-			
-			<span class="item">
-				Elemento 2<i class="fas fa-check-square"></i>
-			</span>
-			
-			<span class="item">
-				Elemento 3<i class="fas fa-check-square"></i>
-			</span>
+	<div class="cont" id="container">
+		<button class="cont__btn">Agregar elemento</button>
+		<div class="cont__list"> 
+			<span class="cont__list-item">Elemento 1<i class="fa-solid fa-xmark"></i></span>
+			<span class="cont__list-item">Elemento 2<i class="fa-solid fa-xmark"></i></span>
+			<span class="cont__list-item">Elemento 3<i class="fa-solid fa-xmark"></i></span>
 		</div>
 	</div>
 
 
 
-<script src="code.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
