--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://kit.fontawesome.com/21cece7f89.js" crossorigin="anonymous"></script>
 	<title>Mejor uso de los eventos del mouse</title>
 	<link rel="stylesheet" href="main.css">
-	<script src="https://kit.fontawesome.com/21cece7f89.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	
-
-
-	<div class="cont" id="container">
-		<button class="cont__btn">Agregar elemento</button>
-		<div class="cont__list"> 
-			<span class="cont__list-item">Elemento 1<i class="fa-solid fa-xmark"></i></span>
-			<span class="cont__list-item">Elemento 2<i class="fa-solid fa-xmark"></i></span>
-			<span class="cont__list-item">Elemento 3<i class="fa-solid fa-xmark"></i></span>
-		</div>
+	<div id="listContainer">
+		<button class="listContainer__btnAdd">Agregar elemento</button>
+		<ol class="list"> 
+			<li class="list__item">Elemento 1<i class="fa-solid fa-xmark"></i></li>
+			<li class="list__item">Elemento 2<i class="fa-solid fa-xmark"></i></li>
+			<li class="list__item">Elemento 3<i class="fa-solid fa-xmark"></i></li>
+		</ol>
 	</div>
-
-
 
 <script src="script.js"></script>
 
